--- a/뉴스 크롤링 - worldcloud.ipynb
+++ b/뉴스 크롤링 - worldcloud.ipynb
@@ -53,7 +53,7 @@
     "while True:\n",
     "    try:\n",
     "\n",
-    "        url = 'https://search.naver.com/search.naver?where=news&sm=tab_pge&query=%EC%8B%AC%EC%95%BC%20%ED%83%9D%EC%8B%9C&sort=0&photo=0&field=0&pd=3&ds=2022.06.03&de=2022.07.23&cluster_rank=36&mynews=0&office_type=0&office_section_code=0&news_office_checked=&nso=so:r,p:from20220603to20220723,a:all&'\n",
+    "        url = 'https://search.naver.com/search.naver?where=news&query=%EB%B3%B5%EC%A7%80%20%EC%82%AC%EA%B0%81%EC%A7%80%EB%8C%80&sm=tab_opt&sort=0&photo=0&field=0&pd=3&ds=2022.08.07&de=2022.08.07&docid=&related=0&mynews=0&office_type=0&office_section_code=0&news_office_checked=&nso=so%3Ar%2Cp%3Afrom20220807to20220807&is_sug_officeid=0'\n",
     "        headers = {'User-Agent' : 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/103.0.0.0 Safari/537.36'}\n",
     "\n",
     "       \n",
